<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>com.atlassian.jira</groupId>
    <artifactId>jira-plugins</artifactId>
    <version>6.3.15</version>
  </parent>
  <artifactId>jira-reference-plugin</artifactId>
  <name>Atlassian JIRA - Plugins - Development Only - Reference Plugin</name>
  <description>JIRA plugin that contains reference implementations of the extension points in JIRA</description>
  <packaging>bundle</packaging>
  <build>
     <pluginManagement>
         <plugins>
              <plugin>
                <artifactId>maven-source-plugin</artifactId>
                <version>2.2.1</version>
                <executions>
                    <execution>
                        <id>attach-sources-for-reference-plugin</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                        <configuration>
                            <attach>true</attach>
                        </configuration>
                        <phase>generate-sources</phase>
                    </execution>
                </executions>
              </plugin>
         </plugins>
    </pluginManagement>
    <plugins>
      <plugin>
        <groupId>org.apache.felix</groupId>
        <artifactId>maven-bundle-plugin</artifactId>
        <version>1.4.3</version>
        <extensions>true</extensions>
        <configuration>
          <instructions>
            <Bundle-SymbolicName>${atlassian.plugin.key}</Bundle-SymbolicName>
              <Bundle-Version>${reference.plugin.version}</Bundle-Version>
              <Private-Package>com.atlassian.jira.*</Private-Package>
              <Export-Package>com.atlassian.jira.dev.reference.plugin.components.*</Export-Package>
              <Spring-Context>*;timeout:=60</Spring-Context>
          </instructions>
        </configuration>
      </plugin>
      <plugin>
        <groupId>org.twdata.maven</groupId>
        <artifactId>maven-cli-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.codehaus.mojo</groupId>
        <artifactId>build-helper-maven-plugin</artifactId>
      </plugin>
        <plugin>
            <groupId>com.atlassian.maven.plugins</groupId>
            <artifactId>maven-jira-plugin</artifactId>
            <extensions>true</extensions>
            <configuration>
                <jvmArgs>-Dplugin.webresource.batching.off=false -Xmx512m -XX:MaxPermSize=256m</jvmArgs>
                <skipManifestValidation>true</skipManifestValidation>
                <productVersion>${project.version}</productVersion>
                <productDataVersion>${jira.data.version}</productDataVersion>
            </configuration>
        </plugin>
        <plugin>
            <artifactId>maven-compiler-plugin</artifactId>
            <configuration>
                <source>1.6</source>
                <target>1.6</target>
            </configuration>
        </plugin>
    </plugins>
  </build>
    <dependencies>
        <dependency>
            <groupId>com.atlassian.jira</groupId>
            <artifactId>jira-core</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.ws.rs</groupId>
            <artifactId>jsr311-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.xml.bind</groupId>
            <artifactId>jaxb-api</artifactId>
            <version>2.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.plugins.rest</groupId>
            <artifactId>atlassian-rest-common</artifactId>
            <version>${rest.version}</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>javax.servlet</groupId>
            <artifactId>servlet-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.templaterenderer</groupId>
            <artifactId>atlassian-template-renderer-api</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>log4j</groupId>
            <artifactId>log4j</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.atlassian.activeobjects</groupId>
            <artifactId>activeobjects-plugin</artifactId>
            <scope>provided</scope>
        </dependency>
    </dependencies>
  <properties>
    <jira.data.version>4.3</jira.data.version>
    <atlassian.plugin.key>com.atlassian.jira.dev.reference-plugin</atlassian.plugin.key>
    <reference.plugin.version>1.0.0</reference.plugin.version>
    <license.scope>test</license.scope>
  </properties>
</project>
